# clipstash

./: .env  Cargo.toml  readme
migrations/: 20221015092401_clips.sql  20221015092947_api_key.sql
src/lib/: mod.rs
src/lib/data/: mod.rs  models.rs  query.rs
src/lib/domain/: maintenance.rs  mod.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  mod.rs  password.rs  posted.rs  title.rs
src/lib/services/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  hitcounter.rs  http.rs  mod.rs
