[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.37"
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1.2.1", features = ["serde", "v4"]}
derive_more = "0.99.17"
rand = "0.8.5"
sqlx = { version = "0.6.2", features = [ "mysql","runtime-async-std-native-tls","macros","chrono","uuid" ] }
handlebars = { version = "4", features = ["dir_source"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
structopt = "0.3"
dotenv = "0.15"
tokio = "1.8.0"
crossbeam-channel = "0.5"
parking_lot = "0.11"
base64 = "0.13"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"]}
strum = { version = "0.21", features = ["derive"]}